test/manual/assignment/errors/invalid_assignment_arithmetic.sol
// Attempting to assign to an arithmetic expression
(3 + 4) = 5;